# permGen

./: permGen.cabal
bench/: Benchmarks.hs
src/: Array.hs  ArrayFast.hs  ArraySimple.hs  BSPerm.hs  CritBit.hs  Main.hs  Map.hs  Trie.hs  Util.hs  VPerm.hs
